variables.RunFour.scala.error
Compilation error:
RunFour:1: error: Missing closing brace `}' assumed here
var c=0
^